forecaster should work now

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="#" target="_blank" class="link__text">
+                <a href="https://princeot.github.io/weather-forecaster/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/PrinceOT" title="View Source Code" target="_blank">
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <a href="https://princeot.github.io/Calculator/" class="link__text">
+              <a href="https://princeot.github.io/weather-forecaster/" class="link__text">
               <img src="images/weather.png" class="work__image" alt="Project 1" />
               </a>
             </div>
