--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/PrinceOT">
-                  <img src="/images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
