new project added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,35 @@
               </a>
             </div>
           </div>
+ <div class="work__box">
+            <div class="work__text">
+              <h3>Finance Tracker</h3>
+              <p>
+                A full stack finance tracker project with react frontend, node backend and as its No-Sql database has firestore from firebase. This project includes an API from plaid banking which mimics information recieved from users within its sandbox mode (not actually using user specifc data for privacy )
+              </p>
+              <ul class="work__list">
+                <li>React</li>
+                <li>Node</li>
+                <li>FireBase FireStore</li>
+                <li>Vercel (Deployment)</li>
+                <li>Plaid API (Banking API)</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://tracker-of-funds.vercel.app/" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="https://github.com/PrinceOT" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box">
+              <a href="https://tracker-of-funds.vercel.app/" class="link__text">
+              <img src="images/weather.png" class="work__image" alt="Project 1" />
+              </a>
+            </div>
+          </div>
           <!-- <div class="work__box">
             <div class="work__text">
               <h3>Notificator</h3>
