diss project added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <span> David (Toyosi) Olaribigbe </span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>1st Class Computer Science W/ yr in Industry @University of Birmingham. Located London </p>
+        <p>1st Class Computer Science W/ yr in Industry @University of Birmingham. Located in London </p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -159,7 +159,39 @@
             </div>
             <div class="work__image-box">
               <a href="https://tracker-of-funds.vercel.app/" class="link__text">
-              <img src="images/weather.png" class="work__image" alt="Project 1" />
+              <img src="images/f-tracker.png" class="work__image" alt="Project 1" />
+              </a>
+            </div>
+          </div>
+ <div class="work__box">
+            <div class="work__text" style="flex: 0 0 40%">
+              <h3>Project Dissertation</h3>
+              <h4 style="color: rgb(0, 0, 236);">A Gamified encouragment system towards mens mental health</h3>
+              
+              <p>
+                This project is my UoB CS dissertation project, a web application which earned a distinction with a score of 76%. The project focuses on developing an innovative platform that leverages gamification techniques to support and encourage men in managing their mental health. By integrating elements such as familarity within gaming, social features towards inclusion, and progress tracking of mental self assessments, the system aims to create a positive and engaging experience that motivates users to engage in self-care and mental well-being activities. This project not only showcases my skills in software development but also my commitment to addressing important societal issues through technology.
+              </p>
+              <ul class="work__list">
+                <li>React</li>
+                <li>Node</li>
+                <li>FireBase Authentication</li>
+                <li>FireBase FireStore</li>
+                <li>Supabase (Postgres)</li>
+                <li>SCSS</li>
+              </ul>
+
+              <div class="work__links">
+                <a href="https://mymental.vercel.app" target="_blank" class="link__text">
+                  Visit Site <span>&rarr;</span>
+                </a>
+                <a href="https://github.com/PrinceOT" title="View Source Code" target="_blank">
+                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                </a>
+              </div>
+            </div>
+            <div class="work__image-box" style="margin: 0 0 13rem 5rem;">
+              <a href="https://mymental.vercel.app" class="link__text">
+              <img src="images/mymental.png" class="work__image" alt="Project 1" />
               </a>
             </div>
           </div>
